syntax = "proto3";

package voice;

service VoiceService {
  rpc GetVoices (Empty) returns (VoiceList);
  rpc CreateVoice (CreateVoiceRequest) returns (CreateVoiceResponse);
  rpc GetAllVoices (GetAllVoicesRequest) returns (GetAllVoicesResponse);
  rpc GetVoiceById (GetVoiceByIdRequest) returns (GetVoiceByIdResponse);
}

message GetVoiceByIdRequest {
  string id = 1;
}
message GetVoiceByIdResponse{
  string id = 1;
  string name = 2;
  TypeForGetAll type = 3;
  LanguageForGetAll language = 4;
  DeviceProfileForGetAll device_profile = 5;
  MediaFileForGetAll sample_voice = 6;
  string gender = 7;
  int32 age = 8;
}

message GetAllVoicesRequest {}
message GetAllVoicesResponse {
  repeated VoiceForGetAll voices = 1;
}
message VoiceForGetAll {
  string id = 1;
  string name = 2;
  TypeForGetAll type = 3;
  LanguageForGetAll language = 4;
  DeviceProfileForGetAll device_profile = 5;
  MediaFileForGetAll sample_voice = 6;
  string gender = 7;
  int32 age = 8;
}
message TypeForGetAll {
  string id = 1;
  string type = 2;
  string description = 3;
}
message LanguageForGetAll {
  string id = 1;
  string language = 2;
  string language_code = 3;
  string description = 4;
}
message DeviceProfileForGetAll {
  string id = 1;
  string name = 2;
  string description = 3;
}
message MediaFileForGetAll {
  string id = 1;
  string url = 2;
  string type = 3;
  int32 size = 4;
}


message CreateVoiceRequest {
  string name = 1;
  string typeId = 2;
  string languageId = 3;
  string deviceProfileId = 4;
  SampleVoiceFile sampleVoiceFile = 5;
  string gender = 6;
  int32 age = 7;
}
message CreateVoiceResponse {
  string id = 1;
  string name = 2;
  string type = 3;
  string language = 4;
  string device_profile = 5;
  string gender = 6;
  int32 age = 7;
  MediaFile sample_voice = 8;
}
message SampleVoiceFile {
  string file_name = 1;
  string file_content = 2;
  string file_type = 3;
}
message MediaFile {
  string id = 1;
  string url = 2;
}

message Empty {}
message Voice {
  string id = 1;
  string name = 2;
  string type_id = 3;
  string language_id = 4;
  string device_profile_id = 5;
  string sample_voice_id = 6;
}
message VoiceList {
  repeated Voice voices = 1;
}
